# chatR-GSOC

./: .gitignore  NEW_FEATURES.md  SETUP.md  USER_GUIDE.md  chatr_complete.R  install_chatr.R  pyproject.toml  quick_setup.sh  readme.md  requirements.txt  setup.py
chatr/: __init__.py  __main__.py
chatr/api/: __init__.py  server.py
chatr/cli/: __init__.py  main.py  mcp_client.py  mcp_serve.py
chatr/core/: __init__.py  assistant.py  config.py
chatr/data_analysis/: __init__.py  data_inspector.py
chatr/llm/: __init__.py  ollama_client.py
chatr/mcp/: __init__.py  server.py
chatr/r_integration/: __init__.py  executor.py
chatr/r_package/R/: data_analysis.R
chatr/rag/: __init__.py  external_sources.py  indexer.py  orchestrator.py  retriever.py
r_package/: DESCRIPTION  NAMESPACE
r_package/R/: chatr.R  chatr_advanced.R  chatr_repl.R  data_analysis.R  rstudio_addins.R
r_package/inst/rstudio/: addins.dcf
r_package/man/: analyze_code.Rd  chatr-package.Rd  chatr.Rd  chatr_addin.Rd  chatr_analysis_tips.Rd  chatr_analyze.Rd  chatr_analyze_selection.Rd  chatr_assistant.Rd  chatr_code.Rd  chatr_code_session.Rd  chatr_data_summary.Rd  chatr_generate_script.Rd  chatr_help_cursor.Rd  chatr_list_data.Rd  chatr_repl.Rd  chatr_serve.Rd  chatr_smart_complete.Rd  chatr_suggest_code.Rd  help_explain.Rd
