[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "chatr"
version = "0.1.0"
description = "An intelligent, local assistant for R programmers"
readme = "readme.md"
requires-python = ">=3.8"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Topic :: Scientific/Engineering",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]
dependencies = [
    "typer>=0.9.0",
    "click>=8.1.0",
    "pydantic>=2.0.0",
    "python-dotenv>=1.0.0",
    "ollama>=0.1.0",
    "sentence-transformers>=2.2.0",
    "rank-bm25>=0.2.2",
    "chromadb>=0.4.0",
    "pandas>=2.0.0",
    "numpy>=1.24.0",
    "requests>=2.31.0",
    "beautifulsoup4>=4.12.0",
    "rpy2>=3.5.0",
    "rich>=13.0.0",
    "httpx>=0.24.0",
    "aiofiles>=23.0.0",
]

[project.scripts]
chatr = "chatr.cli:app"

[project.urls]
Homepage = "https://github.com/your-username/chatR-GSOC"
Repository = "https://github.com/your-username/chatR-GSOC.git"

[tool.setuptools.packages.find]
where = ["."]
include = ["chatr*"]